[package]
name = "pegasus-server"
version = "0.1.0"
authors = ["Simono il magnifico <simoneromano@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP Server
actix-web = "3.3.2"
# Graphql implementation
async-graphql = "2.5.10"
# Graphql implementation actix web adapter
async-graphql-actix-web = "2.5.10"
# Configuration manager
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
# Evaulate config only once
lazy_static = "1.4.0"
# Serialization/Deserialization library
serde = { version = "1.0.124", features = ["derive"] }
# Logger
slog = "2.7.0"
# Logger methods
sloggers = "1.0.1"
