[package]
name = "pegasus-server"
version = "0.1.0"
authors = ["Simono il magnifico <simoneromano@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP Server
actix-web = "3.3.2"
# Have a more flexible Result type
anyhow = "1.0.38"
# Graphql implementation
async-graphql = "2.5.10"
# Graphql implementation actix web adapter
async-graphql-actix-web = "2.5.10"
# Configuration manager
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
# Hashers
djangohashers = "1.4.0"
# Evaulate config only once
lazy_static = "1.4.0"
# Logger
log = "0.4.14"
# Logger methods
log4rs = { version = "1.0.0", features = ["gzip"] }
nanoid = "0.3.0"
# Serialization/Deserialization library
serde = { version = "1.0.124", features = ["derive"] }
# Handle errors with enums
thiserror = "1.0.24"
# Mongo ODM
wither = "0.9.0"
