[package]
name = "pegasus-server"
version = "0.1.0"
authors = ["Simono il magnifico <simoneromano@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP Server
actix-web = { version = "3.3.2", features = ["secure-cookies"] }
# Handle errors with enums
anyhow = "1.0.39"
# Graphql implementation
async-graphql = "2.6.2"
# actix-web graphql adapter
async-graphql-actix-web = "2.6.2"
# Configuration helper
config = { version = "0.11.0", default-features = false, features = ["yaml"] }
# Hashers
djangohashers = { version = "1.4.0", default-features = false, features = ["with_argon2"] }
# Cursors traits
futures = "0.3.13"
# Common HTTP traits, types and constants
http = "0.2.3"
# Lazy static evaluation
lazy_static = "1.4.0"
# Logger
log = "0.4.14"
# Logger methods
log4rs = { version = "1.0.0", features = ["gzip"] }
# URI safe and cryptographically secure random string generator
nanoid = "0.3.0"
# Redis client (pinned to 0.17.0 for tokio <0.3, 0.18.0 <1 compatibility, required by wither and actix-web)
redis = { version = "0.17.0", features = ["aio", "tokio-comp", "connection-manager"] }
# Serialize/Deserializer
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
# Error derive
thiserror = "1.0.24"
# Time utils
time = "0.2.26"
# MongoDB ODM
wither = "0.9.0"
